<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="KEY_HOST"
        android:summary="@string/settingspreferencedialog_summary_address"
        android:title="@string/settingspreferencedialog_title_address" />
    
    <EditTextPreference
        android:defaultValue=""
        android:key="KEY_EMAIL"
        android:summary="@string/settingspreferencedialog_summary_email"
        android:title="@string/settingspreferencedialog_title_email" />
    
    <EditTextPreference
        android:defaultValue=""
        android:key="KEY_API_SECRET"
        android:summary="@string/settingspreferencedialog_summary_api_secret"
        android:title="@string/settingspreferencedialog_title_api_secret" />

    <Preference
        android:key="KEY_SCAN_API_SECRET"
        android:summary="@string/settingspreferencedialog_summary_scan_api_secret"
        android:title="@string/settingspreferencedialog_title_scan_api_secret" />

</PreferenceScreen>